[gd_scene load_steps=31 format=3 uid="uid://cbo4qsbna2q5m"]

[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="1_buk36"]
[ext_resource type="Script" uid="uid://fceup7sys7av" path="res://scripts/coffee_river.gd" id="1_ycmcw"]
[ext_resource type="Texture2D" uid="uid://wts0qss1dwot" path="res://assets/Spritesheets/coffee_river.png" id="2_67rto"]
[ext_resource type="Texture2D" uid="uid://dyy86wykrn1j" path="res://assets/misc/terrain_dream_sq_1.png" id="3_nwp30"]
[ext_resource type="Texture2D" uid="uid://cjotnsylspyjr" path="res://assets/misc/terrain_dream_sq_2.png" id="4_krt34"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="5_krt34"]
[ext_resource type="AudioStream" uid="uid://dih2hf6endof1" path="res://assets/sfx/coffee river sound effect.mp3" id="6_dacxr"]
[ext_resource type="PackedScene" uid="uid://by1egbtidhebe" path="res://scenes/Objects/space_bar.tscn" id="7_1nkjv"]
[ext_resource type="Texture2D" uid="uid://dkcfj3mhkcom4" path="res://assets/Spritesheets/player_idle_right.png" id="9_b4xjq"]
[ext_resource type="Texture2D" uid="uid://b5hki7kvg72vf" path="res://assets/misc/dust_particle.png" id="10_ok6l5"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="11_d840h"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="12_2fh14"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="13_7bgex"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="14_448cq"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="15_2fh14"]

[sub_resource type="Gradient" id="Gradient_2fh14"]
offsets = PackedFloat32Array(0, 0.7310606)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nwp30"]
gradient = SubResource("Gradient_2fh14")
width = 244
height = 244
fill = 1
fill_from = Vector2(0.5, 0.4871795)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm3oa"]
atlas = ExtResource("2_67rto")
region = Rect2(0, 0, 92, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwp30"]
atlas = ExtResource("2_67rto")
region = Rect2(92, 0, 92, 164)

[sub_resource type="SpriteFrames" id="SpriteFrames_krt34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm3oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwp30")
}],
"loop": true,
"name": &"flow",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1nkjv"]
size = Vector2(28.615704, 8.486923)

[sub_resource type="Curve" id="Curve_35jxq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.23282444, 0.14720011), -0.07785186, -0.07785186, 0, 0, Vector2(0.78625953, 0.1888001), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_7m6if"]
width = 2048
curve = SubResource("Curve_35jxq")

[sub_resource type="Curve" id="Curve_ue618"]
_data = [Vector2(0, 0.56320006), 0.0, 0.0, 0, 0, Vector2(0.27480915, 1), 0.0, 0.0, 0, 0, Vector2(0.71374047, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.56320006), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_ev0vn"]
width = 2048
curve = SubResource("Curve_ue618")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0gj4q"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(160, 100, 1)
direction = Vector3(-1, 0, 0)
spread = 180.0
initial_velocity_min = 0.099999994
initial_velocity_max = 0.5
gravity = Vector3(-1, 2, 0)
scale_curve = SubResource("CurveTexture_ev0vn")
alpha_curve = SubResource("CurveTexture_7m6if")

[sub_resource type="Resource" id="Resource_wxx4l"]
script = ExtResource("13_7bgex")
text = "*there's no going back"
text_speed = 12.0
text_sound = ExtResource("14_448cq")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ok6l5"]
size = Vector2(10, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bgex"]
size = Vector2(10, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_448cq"]
size = Vector2(10, 82)

[node name="CoffeeRiver" type="Node2D"]
script = ExtResource("1_ycmcw")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(167, 90)
zoom = Vector2(1.1, 1.1)

[node name="Player" parent="." instance=ExtResource("1_buk36")]
z_index = 2
position = Vector2(38, 100)
speed = 45.0

[node name="playerLight" type="PointLight2D" parent="Player"]
scale = Vector2(0.4398053, 0.4398053)
energy = 0.15
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_nwp30")
metadata/_edit_lock_ = true

[node name="Mug" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(182, 98)
sprite_frames = SubResource("SpriteFrames_krt34")
animation = &"flow"
autoplay = "flow"
frame = 1
frame_progress = 0.95226216
metadata/_edit_lock_ = true

[node name="TerrainDreamSq1" type="Sprite2D" parent="."]
position = Vector2(160, 90)
texture = ExtResource("3_nwp30")
metadata/_edit_lock_ = true

[node name="TerrainDreamSq2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(171, 90)
texture = ExtResource("4_krt34")
metadata/_edit_lock_ = true

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.49816018, 0.59255904, 0.7257535, 1)

[node name="ceilingLight" type="PointLight2D" parent="."]
position = Vector2(437.00003, 91)
scale = Vector2(1.9866805, 1.2602459)
color = Color(0.9843529, 0.98745495, 0.9660104, 1)
energy = 0.7
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_nwp30")
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(2, -17)
polygon = PackedVector2Array(52, 142, 59, 136, 67, 137, 71, 141, 96, 129, 108, 139, 123, 134, 135, 142, 164, 142, 138, 90, 110, 90, 87, 103, 70, 93, 63, 97, 51, 90, 13, 90, 13, 142, 5, 89, 7, 84, 53, 84, 68, 83, 89, 93, 111, 83, 139, 81, 143, 87, 171, 141, 171, 197, 9, 197, 13, 142)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2(2, -17)
polygon = PackedVector2Array(209, 146, 215, 151, 260, 152, 270, 141, 275, 152, 316, 151, 316, 145, 277, 145, 277, 141, 274, 138, 266, 138, 259, 145, 217, 145, 189, 89, 267, 89, 278, 95, 288, 89, 316, 89, 316, 151, 318, 151, 318, 84, 287, 84, 278, 89, 269, 84, 179, 84)
metadata/_edit_lock_ = true

[node name="thedark" type="PointLight2D" parent="."]
z_index = -2
position = Vector2(182.99998, 276)
scale = Vector2(24.593163, 6.4101996)
color = Color(0, 0, 0, 1)
energy = 0.0
blend_mode = 2
shadow_enabled = true
texture = ExtResource("5_krt34")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dacxr")
pitch_scale = 0.95
autoplay = true
parameters/looping = true

[node name="SpaceBar" parent="." instance=ExtResource("7_1nkjv")]
z_index = 1
position = Vector2(144, 99)

[node name="JumpArea" type="Area2D" parent="."]
z_index = 1
position = Vector2(144, 98.000015)
rotation = 1.1060443

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2(0.8963623, -0.24349976)
shape = SubResource("RectangleShape2D_1nkjv")

[node name="PlayerIdleRight" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(115, 95)
texture = ExtResource("9_b4xjq")
hframes = 2
frame = 1

[node name="playerLight" type="PointLight2D" parent="PlayerIdleRight"]
scale = Vector2(0.4398053, 0.4398053)
energy = 0.15
range_item_cull_mask = 3
texture = SubResource("GradientTexture2D_nwp30")
metadata/_edit_lock_ = true

[node name="dust" type="GPUParticles2D" parent="."]
z_index = 1
position = Vector2(167, 89)
amount = 70
amount_ratio = 0.65
texture = ExtResource("10_ok6l5")
speed_scale = 0.2
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_0gj4q")

[node name="DialogueArea" parent="." instance=ExtResource("11_d840h")]
position = Vector2(197, 98.000015)
rotation = -0.45060682
scale = Vector2(0.99999994, 0.99999994)
dialogue = Array[ExtResource("12_2fh14")]([SubResource("Resource_wxx4l")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueArea"]
position = Vector2(1.5258789e-05, -1.5258789e-05)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("RectangleShape2D_ok6l5")
disabled = true

[node name="toBedPart" parent="." instance=ExtResource("15_2fh14")]
z_index = 1
position = Vector2(18, 109)
wanted_room_path = "res://scenes/Days/Dream/starting_point.tscn"
wanted_player_pos = Vector2(302, 110)
isDoor = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBedPart"]
position = Vector2(-5, 3)
shape = SubResource("RectangleShape2D_7bgex")

[node name="toFinal" parent="." instance=ExtResource("15_2fh14")]
position = Vector2(326, 103)
wanted_room_path = "res://scenes/Days/Dream/final.tscn"
wanted_player_pos = Vector2(21, 109)
isDoor = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="toFinal"]
position = Vector2(-5, 3)
shape = SubResource("RectangleShape2D_448cq")

[connection signal="body_entered" from="JumpArea" to="." method="_on_jump_area_body_entered"]
[connection signal="body_exited" from="JumpArea" to="." method="_on_jump_area_body_exited"]
